syntax = "proto3";

package company_a.platform.service_a.api.v1;

import "company_a/platform/service_a/types/v1/common.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.company_a.platform.service_a.api.v1";
option java_multiple_files = true;

// User management service
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  company_a.platform.service_a.types.v1.Address address = 5;
  company_a.platform.service_a.types.v1.UserStatus status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  company_a.platform.service_a.types.v1.Address address = 4;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  company_a.platform.service_a.types.v1.Address address = 5;
  company_a.platform.service_a.types.v1.UserStatus status = 6;
}

message UpdateUserResponse {
  User user = 1;
}
